Bug 206165 - The save template feature when importing a .csv file is not consistent.
Summary: The save template feature when importing a .csv file is not consistent.
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-03 21:08 UTC by Sabine Faure
Modified: 2009-09-10 19:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-09-03 21:08:47 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Configure Akonadi with an IMAP and Kolab resource.
- Launch Kaddressbook.
- Find a .csv file with 2 Contacts in it (or alternatively export 2 Contacts in that format)
- Go to File menu/Import CSV file...
- Browse to enter the .csv file in 'File to import'
- Change the 'Undefined' headings in proper headings
- Click on 'Save Template...'
- A 'Save as' dialogue opens directly in the following folder .../.kde-trunk/share/apps/kontact/csv-templates.

This would suggest that you can browse and save the file somewhere else but in fact the template has to be saved in this folder otherwise it does not work.

- Name the template (ex: Template A) and click on 'Save'
- A 'Template Name' dialogue appears asking you again for the name. Enter a different name (Template B). Click on 'Ok'
- Click on 'Apply Template'. 
- A 'Template Selection' dialogue appears and in it you can only see Template B.

So I think it would be simpler to only keep the 'Template Name' dialogue that would save the file in the correct folder automatically (csv-templates)and the user will only enter a name once which is less confusing.

Unless for some technical reason it is not possible.

Trunk, Svn Rev 1019355
Comment 1 Tobias Koenig 2009-09-04 15:20:49 UTC
SVN commit 1019813 by tokoe:

Hide the fact where the templates are stored from the user

BUG: 206165


 M  +13 -15    csvimportdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1019813
Comment 2 Sabine Faure 2009-09-10 19:53:08 UTC
It is corrected now.

Only the'Template Name' dialogue remains now.
The file is saved in the correct folder automatically (csv-templates)and the
user only enters a name once.

Trunk, Svn Rev 1021831