Hide the fact where the templates are stored from the user

BUG: 206165

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1019813